fix: remove flickering of some elements

--- a/src/features/themeSwitcher/ui/ThemeToggleButton.module.css
+++ b/src/features/themeSwitcher/ui/ThemeToggleButton.module.css
@@ -6,6 +6,8 @@
   border: var(--color-change-theme-border);
   background-color: var(--color-change-theme-background);
   color: var(--color-change-theme-color);
+
+  transition: none;
 }
 
 .toggleButtonText {
